--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
   <div class="popup">
     <div class="popup__container">
       <h3 class="popup__edit-popup">Редактировать профиль</h3>
-      <div class="popup__form">
-        <input type="text" value="Жак-Ив Кусто" id="form" class="popup__field-author">
-        <input type="text" value="Исследователь океана" id="form" class="popup__field-name">
+      <form class="popup__form">
+        <input type="text" value="Жак-Ив Кусто" class="popup__field-author">
+        <input type="text" value="Исследователь океана" class="popup__field-name">
         <button class="popup__submit-button" type="submit">Сохранить</button>
-      </div>
+      </form>
       <img class="popup__close" src="/mesto/images/Close Icon.png">
     </div>
     <div class="popup_opened"></div>
