--- a/index.html
+++ b/index.html
@@ -17,62 +17,62 @@
   <main>
     <section class="profile">
       <div class="profile__main">
-        <img class="profile__avatar" src="/mesto/images/image.jpg">
+        <img class="profile__avatar" src="/mesto/images/image.jpg" alt="Аватар пользователя">
         <div class="profile__info">
           <div class="profile__title-flex">
             <h1 class="profile__title" id="title">Жак-Ив Кусто</h1>
-            <button class="profile__edit-button" href="#">
-            <img class="profile__rectangle" src="../mesto/images/Vector.png">
+            <button class="profile__edit-button">
+            <img class="profile__rectangle" src="../mesto/images/Vector.png" alt="ручка">
             </button>
           </div>
           <h2 class="profile__subtitle" id="subtitle">Исследователь океана</h2>
         </div>
       </div>
       <button class="profile__button">
-        <img class="profile__vector" src="../mesto/images/Vector (1).png">
+        <img class="profile__vector" src="../mesto/images/Vector111.png" alt="плюс">
       </button>
     </section>
     <section class="elements">
       <div class="elements__element">
-        <img class="elements__mask-group" src="../mesto/images/mask-group/kirill-pershin-1088404-unsplash.jpg">
+        <img class="elements__mask-group" src="../mesto/images/mask-group/kirill-pershin-1088404-unsplash.jpg" alt="картинка">
         <div class="element__group">
           <h3 class="elements__title">Карачаевск</h3>
-          <img class="element__like" src="/mesto/images/Vector.svg">
+          <img class="element__like" src="/mesto/images/Vector.svg" alt="лайк">
         </div>
       </div>
       <div class="elements__element">
-        <img class="elements__mask-group" src="../mesto/images/mask-group/kirill-pershin-1404681-unsplash.png">
+        <img class="elements__mask-group" src="../mesto/images/mask-group/kirill-pershin-1404681-unsplash.png" alt="картинка">
         <div class="element__group">
           <h3 class="elements__title">Гора Эльбрус</h3>
-          <img class="element__like" src="/mesto/images/Vector.svg">
+          <img class="element__like" src="/mesto/images/Vector.svg" alt="лайк">
         </div>
       </div>
       <div class="elements__element">
-        <img class="elements__mask-group" src="../mesto/images/mask-group/kirill-pershin-1556355-unsplash (1).png">
+        <img class="elements__mask-group" src="../mesto/images/mask-group/kirill-pershin-1556355-unsplash222.png" alt="картинка">
         <div class="element__group">
           <h3 class="elements__title">Домбай</h3>
-          <img class="element__like" src="/mesto/images/Vector.svg">
+          <img class="element__like" src="/mesto/images/Vector.svg" alt="лайк">
         </div>
       </div>
       <div class="elements__element">
-        <img class="elements__mask-group" src="../mesto/images/mask-group//kirill-pershin-1404681-unsplash (1).png">
+        <img class="elements__mask-group" src="../mesto/images/mask-group//kirill-pershin-1404681-unsplash111.png" alt="картинка">
         <div class="element__group">
           <h3 class="elements__title">Гора Эльбрус</h3>
-          <img class="element__like" src="/mesto/images/Vector.svg">
+          <img class="element__like" src="/mesto/images/Vector.svg" alt="лайк">
         </div>
       </div>
       <div class="elements__element">
-        <img class="elements__mask-group" src="../mesto/images/mask-group//kirill-pershin-1556355-unsplash.png">
+        <img class="elements__mask-group" src="../mesto/images/mask-group//kirill-pershin-1556355-unsplash.png" alt="картинка">
         <div class="element__group">
           <h3 class="elements__title">Домбай</h3>
-          <img class="element__like" src="/mesto/images/Vector.svg">
+          <img class="element__like" src="/mesto/images/Vector.svg" alt="лайк">
         </div>
       </div>
       <div class="elements__element">
-        <img class="elements__mask-group" src="../mesto/images/mask-group/kirill-pershin-1088404-unsplash.png">
+        <img class="elements__mask-group" src="../mesto/images/mask-group/kirill-pershin-1088404-unsplash.png" alt="картинка">
         <div class="element__group">
           <h3 class="elements__title">Карачаево-Черкессия</h3>
-          <img class="element__like" src="/mesto/images/Vector.svg">
+          <img class="element__like" src="/mesto/images/Vector.svg" alt="лайк">
         </div>
       </div>
     </section>
@@ -90,7 +90,7 @@
         <input type="text" value="Исследователь океана" class="popup__field-name">
         <button class="popup__submit-button" type="submit">Сохранить</button>
       </form>
-      <img class="popup__close" src="/mesto/images/Close Icon.png">
+      <img class="popup__close" src="/mesto/images/CloseIcon.png" alt="закрыть">
     </div>
     <div class="popup_opened"></div>
   </div>
