--- a/index.html
+++ b/index.html
@@ -35,44 +35,44 @@
     <section class="elements">
       <div class="elements__element">
         <img class="elements__mask-group" src="../mesto/images/mask-group/kirill-pershin-1088404-unsplash.jpg" alt="картинка">
-        <div class="element__group">
+        <div class="elements__group">
           <h3 class="elements__title">Карачаевск</h3>
-          <img class="element__like" src="/mesto/images/Vector.svg" alt="лайк">
+          <img class="elements__like" src="/mesto/images/Vector.svg" alt="лайк">
         </div>
       </div>
       <div class="elements__element">
         <img class="elements__mask-group" src="../mesto/images/mask-group/kirill-pershin-1404681-unsplash.png" alt="картинка">
-        <div class="element__group">
+        <div class="elements__group">
           <h3 class="elements__title">Гора Эльбрус</h3>
-          <img class="element__like" src="/mesto/images/Vector.svg" alt="лайк">
+          <img class="elements__like" src="/mesto/images/Vector.svg" alt="лайк">
         </div>
       </div>
       <div class="elements__element">
         <img class="elements__mask-group" src="../mesto/images/mask-group/kirill-pershin-1556355-unsplash222.png" alt="картинка">
-        <div class="element__group">
+        <div class="elements__group">
           <h3 class="elements__title">Домбай</h3>
-          <img class="element__like" src="/mesto/images/Vector.svg" alt="лайк">
+          <img class="elements__like" src="/mesto/images/Vector.svg" alt="лайк">
         </div>
       </div>
       <div class="elements__element">
         <img class="elements__mask-group" src="../mesto/images/mask-group//kirill-pershin-1404681-unsplash111.png" alt="картинка">
-        <div class="element__group">
+        <div class="elements__group">
           <h3 class="elements__title">Гора Эльбрус</h3>
-          <img class="element__like" src="/mesto/images/Vector.svg" alt="лайк">
+          <img class="elements__like" src="/mesto/images/Vector.svg" alt="лайк">
         </div>
       </div>
       <div class="elements__element">
         <img class="elements__mask-group" src="../mesto/images/mask-group//kirill-pershin-1556355-unsplash.png" alt="картинка">
-        <div class="element__group">
+        <div class="elements__group">
           <h3 class="elements__title">Домбай</h3>
-          <img class="element__like" src="/mesto/images/Vector.svg" alt="лайк">
+          <img class="elements__like" src="/mesto/images/Vector.svg" alt="лайк">
         </div>
       </div>
       <div class="elements__element">
         <img class="elements__mask-group" src="../mesto/images/mask-group/kirill-pershin-1088404-unsplash.png" alt="картинка">
-        <div class="element__group">
+        <div class="elements__group">
           <h3 class="elements__title">Карачаево-Черкессия</h3>
-          <img class="element__like" src="/mesto/images/Vector.svg" alt="лайк">
+          <img class="elements__like" src="/mesto/images/Vector.svg" alt="лайк">
         </div>
       </div>
     </section>
