--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
   </footer>
 
   <div class="popup">
+    <div class="popup__opened"></div>
     <div class="popup__container">
       <h3 class="popup__edit-popup">Редактировать профиль</h3>
       <form class="popup__form">
@@ -93,8 +94,6 @@
       <img class="popup__close" src="/mesto/images/CloseIcon.png" alt="закрыть">
     </div>
   </div>
-  <div class="popup_opened"></div>
-
 <script src="/mesto/script.js"></script>
 </body>
 
