--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <main>
     <section class="profile">
       <div class="profile__main">
-        <img class="profile__avatar" src="/mesto/images/image.jpg" alt="Аватар пользователя">
+        <img class="profile__avatar" src="../mesto/images/image.jpg" alt="Аватар пользователя">
         <div class="profile__info">
           <div class="profile__title-flex">
             <h1 class="profile__title" id="title">Жак-Ив Кусто</h1>
@@ -37,42 +37,42 @@
         <img class="elements__mask-group" src="../mesto/images/mask-group/kirill-pershin-1088404-unsplash.jpg" alt="картинка">
         <div class="elements__group">
           <h3 class="elements__title">Карачаевск</h3>
-          <img class="elements__like" src="/mesto/images/Vector.svg" alt="лайк">
+          <img class="elements__like" src="../mesto/images/Vector.svg" alt="лайк">
         </div>
       </div>
       <div class="elements__element">
         <img class="elements__mask-group" src="../mesto/images/mask-group/kirill-pershin-1404681-unsplash.png" alt="картинка">
         <div class="elements__group">
           <h3 class="elements__title">Гора Эльбрус</h3>
-          <img class="elements__like" src="/mesto/images/Vector.svg" alt="лайк">
+          <img class="elements__like" src="../mesto/images/Vector.svg" alt="лайк">
         </div>
       </div>
       <div class="elements__element">
         <img class="elements__mask-group" src="../mesto/images/mask-group/kirill-pershin-1556355-unsplash222.png" alt="картинка">
         <div class="elements__group">
           <h3 class="elements__title">Домбай</h3>
-          <img class="elements__like" src="/mesto/images/Vector.svg" alt="лайк">
+          <img class="elements__like" src="../mesto/images/Vector.svg" alt="лайк">
         </div>
       </div>
       <div class="elements__element">
         <img class="elements__mask-group" src="../mesto/images/mask-group//kirill-pershin-1404681-unsplash111.png" alt="картинка">
         <div class="elements__group">
           <h3 class="elements__title">Гора Эльбрус</h3>
-          <img class="elements__like" src="/mesto/images/Vector.svg" alt="лайк">
+          <img class="elements__like" src="../mesto/images/Vector.svg" alt="лайк">
         </div>
       </div>
       <div class="elements__element">
         <img class="elements__mask-group" src="../mesto/images/mask-group//kirill-pershin-1556355-unsplash.png" alt="картинка">
         <div class="elements__group">
           <h3 class="elements__title">Домбай</h3>
-          <img class="elements__like" src="/mesto/images/Vector.svg" alt="лайк">
+          <img class="elements__like" src="../mesto/images/Vector.svg" alt="лайк">
         </div>
       </div>
       <div class="elements__element">
         <img class="elements__mask-group" src="../mesto/images/mask-group/kirill-pershin-1088404-unsplash.png" alt="картинка">
         <div class="elements__group">
           <h3 class="elements__title">Карачаево-Черкессия</h3>
-          <img class="elements__like" src="/mesto/images/Vector.svg" alt="лайк">
+          <img class="elements__like" src="../mesto/images/Vector.svg" alt="лайк">
         </div>
       </div>
     </section>
@@ -91,10 +91,10 @@
         <input type="text" value="Исследователь океана" class="popup__field-name">
         <button class="popup__submit-button" type="submit">Сохранить</button>
       </form>
-      <img class="popup__close" src="/mesto/images/CloseIcon.png" alt="закрыть">
+      <img class="popup__close" src="../mesto/images/CloseIcon.png" alt="закрыть">
     </div>
   </div>
-<script src="/mesto/script.js"></script>
+<script src="../mesto/script.js"></script>
 </body>
 
 </html>
