--- a/index.html
+++ b/index.html
@@ -5,74 +5,74 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../etomesto/pages/index.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Mesto</title>
 </head>
 
 <body class="page">
   <header class="header">
-    <img class="header__logo" src="../etomesto/images/logo.svg" alt="Логотип место">
+    <img class="header__logo" src="./images/logo.svg" alt="Логотип место">
     <div class="header__line"></div>
   </header>
   <main>
     <section class="profile">
       <div class="profile__main">
-        <img class="profile__avatar" src="../etomesto/images/image.jpg" alt="Аватар пользователя">
+        <img class="profile__avatar" src="./images/image.jpg" alt="Аватар пользователя">
         <div class="profile__info">
           <div class="profile__title-flex">
             <h1 class="profile__title" id="title">Жак-Ив Кусто</h1>
             <button class="profile__edit-button">
-            <img class="profile__rectangle" src="../etomesto/images/Vector.png" alt="ручка">
+            <img class="profile__rectangle" src="./images/Vector.png" alt="ручка">
             </button>
           </div>
           <h2 class="profile__subtitle" id="subtitle">Исследователь океана</h2>
         </div>
       </div>
       <button class="profile__button">
-        <img class="profile__vector" src="../etomesto/images/Vector111.png" alt="плюс">
+        <img class="profile__vector" src="./images/Vector111.png" alt="плюс">
       </button>
     </section>
     <section class="elements">
       <div class="elements__element">
-        <img class="elements__mask-group" src="../etomesto/images/mask-group/kirill-pershin-1088404-unsplash.jpg" alt="картинка">
+        <img class="elements__mask-group" src="./images/mask-group/kirill-pershin-1088404-unsplash.jpg" alt="картинка">
         <div class="elements__group">
           <h3 class="elements__title">Карачаевск</h3>
-          <img class="elements__like" src="../etomesto/images/Vector.svg" alt="лайк">
+          <img class="elements__like" src="./images/Vector.svg" alt="лайк">
         </div>
       </div>
       <div class="elements__element">
-        <img class="elements__mask-group" src="../etomesto/images/mask-group/kirill-pershin-1404681-unsplash.png" alt="картинка">
+        <img class="elements__mask-group" src="./images/mask-group/kirill-pershin-1404681-unsplash.png" alt="картинка">
         <div class="elements__group">
           <h3 class="elements__title">Гора Эльбрус</h3>
-          <img class="elements__like" src="../etomesto/images/Vector.svg" alt="лайк">
+          <img class="elements__like" src="./images/Vector.svg" alt="лайк">
         </div>
       </div>
       <div class="elements__element">
-        <img class="elements__mask-group" src="../etomesto/images/mask-group/kirill-pershin-1556355-unsplash222.png" alt="картинка">
+        <img class="elements__mask-group" src="./images/mask-group/kirill-pershin-1556355-unsplash222.png" alt="картинка">
         <div class="elements__group">
           <h3 class="elements__title">Домбай</h3>
-          <img class="elements__like" src="../etomesto/images/Vector.svg" alt="лайк">
+          <img class="elements__like" src="./images/Vector.svg" alt="лайк">
         </div>
       </div>
       <div class="elements__element">
-        <img class="elements__mask-group" src="../etomesto/images/mask-group//kirill-pershin-1404681-unsplash111.png" alt="картинка">
+        <img class="elements__mask-group" src="./images/mask-group//kirill-pershin-1404681-unsplash111.png" alt="картинка">
         <div class="elements__group">
           <h3 class="elements__title">Гора Эльбрус</h3>
-          <img class="elements__like" src="../etomesto/images/Vector.svg" alt="лайк">
+          <img class="elements__like" src="./images/Vector.svg" alt="лайк">
         </div>
       </div>
       <div class="elements__element">
-        <img class="elements__mask-group" src="../etomesto/images/mask-group//kirill-pershin-1556355-unsplash.png" alt="картинка">
+        <img class="elements__mask-group" src="./images/mask-group//kirill-pershin-1556355-unsplash.png" alt="картинка">
         <div class="elements__group">
           <h3 class="elements__title">Домбай</h3>
-          <img class="elements__like" src="../etomesto/images/Vector.svg" alt="лайк">
+          <img class="elements__like" src="./images/Vector.svg" alt="лайк">
         </div>
       </div>
       <div class="elements__element">
-        <img class="elements__mask-group" src="../etomesto/images/mask-group/kirill-pershin-1088404-unsplash.png" alt="картинка">
+        <img class="elements__mask-group" src="./images/mask-group/kirill-pershin-1088404-unsplash.png" alt="картинка">
         <div class="elements__group">
           <h3 class="elements__title">Карачаево-Черкессия</h3>
-          <img class="elements__like" src="../etomesto/images/Vector.svg" alt="лайк">
+          <img class="elements__like" src="./images/Vector.svg" alt="лайк">
         </div>
       </div>
     </section>
@@ -91,10 +91,10 @@
         <input type="text" value="Исследователь океана" class="popup__field-name">
         <button class="popup__submit-button" type="submit">Сохранить</button>
       </form>
-      <img class="popup__close" src="../etomesto/images/CloseIcon.png" alt="закрыть">
+      <img class="popup__close" src="./images/CloseIcon.png" alt="закрыть">
     </div>
   </div>
-<script src="../etomesto/script.js"></script>
+<script src="./script.js"></script>
 </body>
 
 </html>
