--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <img class="profile__avatar" src="./images/image.jpg" alt="Аватар пользователя">
         <div class="profile__info">
           <div class="profile__title-flex">
-            <h1 class="profile__title" id="title">Жак-Ив Кусто</h1>
+            <h1 class="profile__title">Жак-Ив Кусто</h1>
             <button class="profile__edit-button">
             <img class="profile__rectangle" src="./images/Vector.png" alt="ручка">
             </button>
           </div>
-          <h2 class="profile__subtitle" id="subtitle">Исследователь океана</h2>
+          <h2 class="profile__subtitle">Исследователь океана</h2>
         </div>
       </div>
       <button class="profile__button">
