--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
   <div class="popup">
     <div class="popup__container">
       <h3 class="popup__edit-popup">Редактировать профиль</h3>
-      <form class="popup__form" type="name">
-        <input type="name" value="Жак-Ив Кусто" class="popup__field-author">
-        <input type="name" value="Исследователь океана" class="popup__field-name">
+      <form class="popup__form" name="edit">
+        <input type="text" name="edit" value="Жак-Ив Кусто" class="popup__field-author">
+        <input type="text" name="edit" value="Исследователь океана" class="popup__field-name">
         <button class="popup__submit-button" type="submit">Сохранить</button>
       </form>
       <button class="popup__close" type="submit"></button>
