--- a/index.html
+++ b/index.html
@@ -20,54 +20,54 @@
         <div class="profile__info">
           <div class="profile__title-flex">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
-            <button class="profile__edit-button" type="submit"></button>
+            <button class="profile__edit-button" type="button"></button>
           </div>
           <h2 class="profile__subtitle">Исследователь океана</h2>
         </div>
       </div>
-      <button class="profile__button" type="submit"></button>
+      <button class="profile__button" type="button"></button>
     </section>
     <section class="elements">
       <div class="elements__element">
         <img class="elements__mask-group" src="./images/mask-group/kirill-pershin-1088404-unsplash.jpg" alt="картинка">
         <div class="elements__group">
           <h3 class="elements__title">Карачаевск</h3>
-          <button class="elements__like" type="submit"></button>
+          <button class="elements__like" type="button"></button>
         </div>
       </div>
       <div class="elements__element">
         <img class="elements__mask-group" src="./images/mask-group/kirill-pershin-1404681-unsplash.png" alt="картинка">
         <div class="elements__group">
           <h3 class="elements__title">Гора Эльбрус</h3>
-          <button  class="elements__like" type="submit"></button>
+          <button  class="elements__like" type="button"></button>
         </div>
       </div>
       <div class="elements__element">
         <img class="elements__mask-group" src="./images/mask-group/kirill-pershin-1556355-unsplash222.png" alt="картинка">
         <div class="elements__group">
           <h3 class="elements__title">Домбай</h3>
-          <button  class="elements__like" type="submit"></button>
+          <button  class="elements__like" type="button"></button>
         </div>
       </div>
       <div class="elements__element">
         <img class="elements__mask-group" src="./images/mask-group//kirill-pershin-1404681-unsplash111.png" alt="картинка">
         <div class="elements__group">
           <h3 class="elements__title">Гора Эльбрус</h3>
-          <button  class="elements__like" type="submit"></button>
+          <button  class="elements__like" type="button"></button>
         </div>
       </div>
       <div class="elements__element">
         <img class="elements__mask-group" src="./images/mask-group//kirill-pershin-1556355-unsplash.png" alt="картинка">
         <div class="elements__group">
           <h3 class="elements__title">Домбай</h3>
-          <button  class="elements__like" type="submit"></button>
+          <button  class="elements__like" type="button"></button>
         </div>
       </div>
       <div class="elements__element">
         <img class="elements__mask-group" src="./images/mask-group/kirill-pershin-1088404-unsplash.png" alt="картинка">
         <div class="elements__group">
           <h3 class="elements__title">Карачаево-Черкессия</h3>
-          <button  class="elements__like" type="submit"></button>
+          <button  class="elements__like" type="button"></button>
         </div>
       </div>
     </section>
@@ -81,11 +81,11 @@
     <div class="popup__container">
       <h3 class="popup__edit-popup">Редактировать профиль</h3>
       <form class="popup__form" name="edit">
-        <input type="text" name="edit" value="Жак-Ив Кусто" class="popup__field-author">
-        <input type="text" name="edit" value="Исследователь океана" class="popup__field-name">
+        <input type="text" name="author" value="Жак-Ив Кусто" class="popup__field-author">
+        <input type="text" name="title" value="Исследователь океана" class="popup__field-name">
         <button class="popup__submit-button" type="submit">Сохранить</button>
       </form>
-      <button class="popup__close" type="submit"></button>
+      <button class="popup__close" type="button"></button>
     </div>
   </div>
 <script src="./scripts/index.js"></script>
