--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
       <button class="popup__close" type="button"></button>
     </div>
   </div>
+
+  <div class="popup-form">
+    <div class="popup-form__container">
+      <h3 class="popup-form__edit-popup">Новое место</h3>
+      <form class="popup-form__form" name="new-place">
+        <input type="text" name="title-place" placeholder="Название" class="popup-form__field-author">
+        <input type="text" name="url" placeholder="Ссылка на картинку" class="popup-form__field-name">
+        <button class="popup-form__submit-button" type="submit">Создать</button>
+      </form>
+      <button class="popup-form__close" type="button"></button>
+    </div>
+  </div>
+
 <script src="./scripts/index.js"></script>
 </body>
 
