--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
       <button class="profile__button" type="button"></button>
     </section>
     <section class="elements">
+    <!-- 
       <div class="elements__element">
         <img class="elements__mask-group" src="./images/mask-group/kirill-pershin-1088404-unsplash.jpg" alt="картинка">
         <div class="elements__group">
           <h3 class="elements__title">Карачаевск</h3>
           <button class="elements__like" type="button"></button>
         </div>
+        <button type="button" class="elements__delete"></button>
       </div>
       <div class="elements__element">
         <img class="elements__mask-group" src="./images/mask-group/kirill-pershin-1404681-unsplash.png" alt="картинка">
@@ -70,6 +72,7 @@
           <button  class="elements__like" type="button"></button>
         </div>
       </div>
+      -->
     </section>
   </main>
 
@@ -93,12 +96,31 @@
     <div class="popup-form__container">
       <h3 class="popup-form__edit-popup">Новое место</h3>
       <form class="popup-form__form" name="new-place">
-        <input type="text" name="title-place" placeholder="Название" class="popup-form__field-author">
-        <input type="text" name="url" placeholder="Ссылка на картинку" class="popup-form__field-name">
+        <input type="text" name="name" value="" placeholder="Название" class="popup-form__field-author">
+        <input type="text" name="link" value="" placeholder="Ссылка на картинку" class="popup-form__field-name">
         <button class="popup-form__submit-button" type="submit">Создать</button>
       </form>
       <button class="popup-form__close" type="button"></button>
     </div>
+  </div>
+
+  <template id="form-elements">
+          <div class="elements__element">
+        <img class="elements__mask-group" src="./images/mask-group//kirill-pershin-1556355-unsplash.png" alt="картинка">
+        <div class="elements__group">
+          <h3 class="elements__title">Домбай</h3>
+          <button  class="elements__like" type="button"></button>
+        </div>
+        <button type="button" class="elements__delete"></button>
+      </div>
+  </template>
+
+  <div class="popup-image">
+    <div class="popup-image__container">
+      <div class="popup-image__background"></div>
+      <button class="popup-image__close" type="button"></button>
+    </div>
+    <h3 class="popup-image__edit-popup">Архыз</h3>
   </div>
 
 <script src="./scripts/index.js"></script>
