--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <h3 class="popup-form__edit-popup">Новое место</h3>
       <form class="popup-form__form" name="new-place">
         <input type="text" name="name" value="" placeholder="Название" class="popup-form__field-author">
-        <input type="text" name="link" value="" placeholder="Ссылка на картинку" class="popup-form__field-name">
+        <input type="url" name="link" value="" placeholder="Ссылка на картинку" class="popup-form__field-name">
         <button class="popup-form__submit-button" type="submit">Создать</button>
       </form>
       <button class="popup-form__close" type="button"></button>
@@ -117,12 +117,11 @@
 
   <div class="popup-image">
     <div class="popup-image__container">
-      <div class="popup-image__background"></div>
       <button class="popup-image__close" type="button"></button>
     </div>
     <h3 class="popup-image__edit-popup">Архыз</h3>
   </div>
-
+<script src="./scripts/cards.js"></script>
 <script src="./scripts/index.js"></script>
 </body>
 
