--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="popup__container">
       <h3 class="popup__edit-popup">Редактировать профиль</h3>
       <form class="popup__form" name="edit" novalidate>
-          <fieldset class="popup__form-set"></fieldset>
+          <fieldset class="popup__form-set">
             <label class="popup__field">
               <input type="text" name="input-author" value="Жак-Ив Кусто" class="popup__input popup__field-author" required minlength="2" maxlength="40">
 
