--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
   <div class="popup-form">
     <div class="popup-form__container">
       <h3 class="popup-form__edit-popup">Новое место</h3>
-      <form class="popup__form" name="new-place" novalidate>
-        <fieldset class="popup__form-set">
+      <form class="popup-form__form" name="new-place" novalidate>
+        <fieldset class="popup-form__form-set">
           <input type="text" name="input-caption" value="" placeholder="Название" class="popup-form__field-author popup__input" required minlength="2" maxlength="40">
           <span class="input-caption-error input-error"></span>
           <input type="url" name="input-link" value="" placeholder="Ссылка на картинку" class="popup-form__field-name popup__input" required minlength="2" maxlength="200">
