--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
   <div class="popup">
     <div class="popup__container">
       <h3 class="popup__edit-popup">Редактировать профиль</h3>
-      <form class="popup__form popups" name="edit" novalidate>
+      <form class="popup__form form" name="edit" novalidate>
           <fieldset class="popup__form-set">
             <label class="popup__field">
-              <input type="text" name="input-author" value="Жак-Ив Кусто" class="popup__input popup__field-author" required minlength="2" maxlength="40">
+              <input type="text" name="input-author" value="Жак-Ив Кусто" class="popup__field-author input" required minlength="2" maxlength="40">
 
               <span class="input-author-error input-error"></span>
               </label>
             <label class="popup__field">
-              <input type="text" name="input-title" value="Исследователь океана" class="popup__input popup__field-name" required minlength="2" maxlength="200">
+              <input type="text" name="input-title" value="Исследователь океана" class="popup__field-name input" required minlength="2" maxlength="200">
 
               <span class="input-title-error input-error"></span>
             </label>
-            <button class="popup__submit-button" type="submit">Сохранить</button>
+            <button class="popup__submit-button submit-button" type="submit">Сохранить</button>
       </fieldset>
       </form>
       <button class="popup__close" type="button"></button>
@@ -64,13 +64,13 @@
   <div class="popup-form">
     <div class="popup-form__container">
       <h3 class="popup-form__edit-popup">Новое место</h3>
-      <form class="popup-form__form popups" name="new-place" novalidate>
+      <form class="popup-form__form form" name="new-place" novalidate>
         <fieldset class="popup-form__form-set">
-          <input type="text" name="input-caption" value="" placeholder="Название" class="popup-form__field-author popup-form__input" required minlength="2" maxlength="40">
+          <input type="text" name="input-caption" value="" placeholder="Название" class="popup-form__field-author input " required minlength="2" maxlength="40">
           <span class="input-caption-error input-error"></span>
-          <input type="url" name="input-link" value="" placeholder="Ссылка на картинку" class="popup-form__field-name popup-form__input" required minlength="2" maxlength="200">
+          <input type="url" name="input-link" value="" placeholder="Ссылка на картинку" class="popup-form__field-name input" required minlength="2" maxlength="200">
           <span class="input-link-error input-error"></span>
-          <button class="popup-form__submit-button" type="submit">Создать</button>
+          <button class="popup-form__submit-button submit-button" type="submit">Создать</button>
         </fieldset>
       </form>
       <button class="popup-form__close" type="button"></button>
