--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <span class="input-caption-error input-error"></span>
           <input type="url" name="input-link" value="" placeholder="Ссылка на картинку" class="popup-form__field-name input" required minlength="2" maxlength="200">
           <span class="input-link-error input-error"></span>
-          <button class="popup-form__submit-button submit-button" type="submit">Создать</button>
+          <button class="popup-form__submit-button submit-button popup-form__submit-button_disabled" disabled="true" type="submit">Создать</button>
         </fieldset>
       </form>
       <button class="popup-form__close" type="button"></button>
