--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
         <button type="button" class="elements__delete"></button>
       </div>
   </template>
-<!-- хоть и запрещенно, но тут они не одинаковы, но делаю так как говорят-->
+  
   <div class="popup image-popup">
     <div class="image-container">
-      <button class="image-close" type="button"></button>
+      <button class="image-close popup__close" type="button"></button>
     </div>
     <h3 class="image-edit-popup">Архыз</h3>
   </div>
