--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   
   <div class="popup image-popup">
     <div class="image-container">
-      <button class="image-close popap__close" type="button"></button>
+      <button class="image-close popup__closee" type="button"></button>
     </div>
     <h3 class="image-edit-popup">Архыз</h3>
   </div>
