--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,10 @@
   <main>
     <section class="profile">
       <div class="profile__main">
+        <div class="profile__hover-position">
         <img class="profile__avatar" src="<%=require('./images/image.jpg')%>" alt="Аватар пользователя">
+        <img class="profile__hover" src="<%=require('./images/PencilSvg.svg')%>">
+        </div>
         <div class="profile__info">
           <div class="profile__title-flex">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
@@ -93,6 +96,27 @@
       <button class="image-close popup__closee close" type="button"></button>
     </div>
     <h3 class="image-edit-popup">Архыз</h3>
+  </div>
+  <div class="popup popup-delete">
+    <div class="popup-delete__container">
+      <h2 class="popup-delete__title">Вы уверены?</h2>
+      <button class="popup-delete__button" type="submit">ДА</button>
+      <button class="popup-delete__close close" type="button"></button>
+    </div>
+  </div>
+  <div class="popup popup-new-avatar">
+    <div class="popup-new-avatar__container">
+      <h2 class="popup-new-avatar__title">Обновить аватар</h2>
+      <form class="popup-new-avatar__form form card-form" name="new-place" novalidate>
+        <fieldset class="popup-new-avatar__form-set">
+          <input type="url" name="link" value="" class="popup-new-avatar__field-link input card-field-name" required minlength="2" maxlength="200">
+          <span class="link-error input-error"></span>
+          <button class="popup-new-avatar__button submit-button popup-new-avatar-submit-button" type="submit">Сохранить</button>
+          <!-- <button class="popup__submit-button submit-button card-submit-button popup__submit-button_disabled" disabled="true" type="submit">Создать</button> -->
+        </fieldset>
+      </form>
+      <button class="popup-new-avatar__close close" type="button"></button>
+    </div>
   </div>
 </body>
 </html>
