--- a/src/index.html
+++ b/src/index.html
@@ -116,7 +116,7 @@
         <fieldset class="popup-new-avatar__form-set">
           <input type="url" name="link" value="" class="popup-new-avatar__field-link input card-field-link" required minlength="2" maxlength="200">
           <span class="link-error input-error"></span>
-          <button class="popup__submit-button popup-new-avatar-button submit-button card-submit-button popup__submit-button_disabled" type="submit">Сохранить</button>
+          <button class="popup__submit-button popup-new-avatar-button submit-button card-submit-button popup__submit-button_disabled" disabled="true" type="submit">Сохранить</button>
         </fieldset>
       </form>
       <button class="popup-new-avatar__close close" type="button"></button>
